Fixed z-index for buttons on front page

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -229,7 +229,7 @@ main {
         width : 100%;
         height : 100%;
         position : relative;
-        z-index : 9999999;
+        z-index : 10;
       }
         main > nav > ul > li > a > span {
           display : block;
